# Integration-Project-4

./: .gitignore  .gitlab-ci.yml  CmakeLists.txt  vcpkg.json
.github/workflows/: c-cpp.yml  gitlab-mirror.yml
backend/: .gitlab-ci.yml  CmakeLists.txt
backend/tests/: CMakeLists.txt
coverage/: coverage.xml  index.html
coverage/Modules/: client_test.html
coverage/Modules/client_test/: Apolo.cpp.html  Apolo6031.cpp.html  Ares.cpp.html  Ares7021.cpp.html  Ares7023.cpp.html  Ares7031.cpp.html  Ares8023.cpp.html  Ares8023_15.cpp.html  Ares8023_200.cpp.html  Catalog.cpp.html  Cronos.cpp.html  Cronos6001_A.cpp.html  Cronos6003.cpp.html  Cronos6021_A.cpp.html  Cronos6021_L.cpp.html  Cronos7023.cpp.html  Cronos7023_2_5.cpp.html  Cronos7023_L.cpp.html  GlobalID.cpp.html  Meter.cpp.html  ThreePhaseMeter.cpp.html  Zeus.cpp.html  Zeus8021.cpp.html  Zeus8023.cpp.html  Zeus8031.cpp.html  (+1 more)
frontend/: .gitlab-ci.yml  CmakeLists.txt
include/client/: client.h
include/core/: Catalog.h  CatalogControler.h  GlobalID.h
include/meters/: Meter.h
include/server/: server.hpp
include/service/: meter_service.h  meter_service.hpp
include/ui/: App.h  MainFrame.h  Ui.h
proto/: CmakeLists.txt  meter.proto
src/: client.cpp  main.cpp
src/client/: client.cpp  main.cpp
src/core/: Branch protegidas.txt  Catalog.cpp  CatalogControler.cpp  GlobalID.cpp
src/meters/: Meter.cpp
src/server/: server.cpp
src/service/: meter_service.cpp
src/ui/: App.cpp  CmakeLists.txt  MainFrame.cpp  Ui.cpp
tests/: CMakeLists.txt
tests/src/: test_catalog.cpp  test_client.cpp  teste_Catalogo.cpp
(+49 files in other folders)
